--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
   },
   "private": true,
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.3.0",
     "recoil": "^0.7.3",
     "regenerator-runtime": "0.13.7",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.1.3",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -22,7 +26,7 @@
     "@nrwl/eslint-plugin-nx": "14.3.6",
     "@nrwl/jest": "14.3.6",
     "@nrwl/linter": "14.3.6",
-    "@nrwl/react": "14.3.6",
+    "@nrwl/react": "^14.3.6",
     "@nrwl/web": "14.3.6",
     "@nrwl/workspace": "14.3.6",
     "@testing-library/react": "13.3.0",
