--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "regenerator-runtime": "0.13.7",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "xstate": "^4.32.1"
   },
   "devDependencies": {
     "@nrwl/cli": "14.3.6",
